[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_18/Pawn_18_Head.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pawns/Pawn_18_Parts/Pawn_18_Head.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_18/Pawn_18_Head_Eye.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_18/Pawn_18_Head_Mouth.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Off"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_18_Eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_18_Mouth:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "On"
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_18_Eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 5, 5.1, 5.2, 5.3, 5.4, 5.5, 5.6, 5.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 6, 8, 10, 11, 10, 8, 6, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_18_Mouth:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3, 3.1, 3.2, 3.3, 3.4, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 2, 1, 0, 1 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Stun"
tracks/0/type = "value"
tracks/0/path = NodePath("Pawn_18_Eye:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 3, 11, 10, 9, 8, 7, 6, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pawn_18_Mouth:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 2, 3, 2, 3, 2, 3, 2, 3, 1 ]
}

[node name="Pawn_18_Head" type="Node2D"]
script = ExtResource( 2 )

[node name="Pawn_18_Shield" type="Sprite" parent="."]
visible = false
position = Vector2( 8, -4 )
texture = ExtResource( 1 )
hframes = 5
frame = 3

[node name="Pawn_18_Head" type="Sprite" parent="."]
position = Vector2( 8, -4 )
texture = ExtResource( 1 )
hframes = 5

[node name="Pawn_18_Eye" type="Sprite" parent="."]
position = Vector2( 8, -4 )
texture = ExtResource( 3 )
vframes = 4
hframes = 4

[node name="Pawn_18_Mouth" type="Sprite" parent="."]
position = Vector2( 8, -4 )
texture = ExtResource( 4 )
hframes = 4
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Off = SubResource( 1 )
anims/On = SubResource( 2 )
anims/Stun = SubResource( 3 )
